--- a/src/style.css
+++ b/src/style.css
@@ -75,6 +75,9 @@ body .admin-section {
   flex-direction: column;
   padding: 40px 12px;
 }
+body .admin-section .denied-msg {
+  margin: 40px auto;
+}
 body .admin-section .admin-title {
   margin: 0 auto 40px;
   font-size: 1.8rem;
@@ -87,7 +90,7 @@ body .admin-section .admin-text {
 body .admin-section .modify-btn,
 body .admin-section .delete-btn,
 body .admin-section .return-btn {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   padding: 5px 10px;
   background-color: transparent;
   border-radius: 5px;
