--- a/src/sass/includes/_base.scss
+++ b/src/sass/includes/_base.scss
@@ -235,7 +235,7 @@ body {
 
     textarea {
       margin-bottom: 25px;
-      padding-left: 10px;
+      padding: 10px;
       border: 1px solid $gray;
       border-radius: $border-radius;
       outline: none;
