--- a/src/sass/includes/_occasions.scss
+++ b/src/sass/includes/_occasions.scss
@@ -83,7 +83,7 @@
         gap: 20px;
 
         .occasions-title {
-          font-size: 1.3rem;
+          font-size: 1.2rem;
           font-weight: 700;
           text-transform: uppercase;
         }
@@ -170,6 +170,12 @@
         .occasions-img {
           width: 100%;
           height: 180px;
+        }
+
+        .occasions-infos {
+          .occasions-title {
+            font-size: 1rem;
+          }
         }
 
         .occasions-btns {
