--- a/src/style.css
+++ b/src/style.css
@@ -186,7 +186,7 @@ body form input {
 }
 body form textarea {
   margin-bottom: 25px;
-  padding-left: 10px;
+  padding: 10px;
   border: 1px solid #454545;
   border-radius: 5px;
   outline: none;
@@ -474,9 +474,12 @@ footer .footer-items .footer-contact .contact-infos .fas {
   border: none;
 }
 .services .services-content .services-cards .service-card .service-card-description {
+  margin: auto;
+}
+.services .services-content .services-cards .service-card .service-card-description p {
   font-weight: 300;
   font-size: 1rem;
-  text-align: justify;
+  text-align: center;
 }
 @media screen and (min-width: 700px) {
   .services .services-content .services-cards {
@@ -499,14 +502,21 @@ footer .footer-items .footer-contact .contact-infos .fas {
     position: absolute;
     width: 240px;
     height: 230px;
-    font-weight: 300;
-    text-align: justify;
     color: #ffffff;
     padding: 15px;
     border-radius: 5px;
     background-color: black;
     opacity: 0.8;
     display: none;
+  }
+  .services .services-content .services-cards .service-card .service-card-description p {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.1rem;
+    font-weight: 300;
+    text-align: center;
   }
   .services .services-content .services-cards .service-card:hover .service-card-description {
     display: block;
@@ -609,7 +619,7 @@ footer .footer-items .footer-contact .contact-infos .fas {
   gap: 20px;
 }
 .occasions-management .occasions-list .occasions-card .occasions-infos .occasions-title {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -679,6 +689,9 @@ footer .footer-items .footer-contact .contact-infos .fas {
   .occasions-management .occasions-list .occasions-card .occasions-img {
     width: 100%;
     height: 180px;
+  }
+  .occasions-management .occasions-list .occasions-card .occasions-infos .occasions-title {
+    font-size: 1rem;
   }
   .occasions-management .occasions-list .occasions-card .occasions-btns a {
     font-size: 1.1rem;
